# AbyssOfMeanings

./: .gitignore  diary_db.py  digest.bat  pyproject.toml  readme.md  update_brain.bat
src/brain2/: __init__.py  arxiv_downloader.py  config.py  db_schema.py  db_utils.py  download_config.yaml  download_manager.py  downloader.py  embedding_store.py  llm_client.py  ollama_summarizer.py  pdf_utils.py  query_engine.py  semantic_downloader.py  topics.json
src/brain2/cli/: __init__.py  ask.py  bulk_download.py  digest.py  download.py  extract.py  fetch.py  folder_import.py  index.py  init_db.py  library_digest.py  tg_bot.py
tests/: check_db.py  cleanup.py  morning_routine.py  sync_folders.py  sync_txt.py
